2003-02-08  Martin Baulig  <martin@ximian.com>

	* MonoSymbolDocumentWriter.cs: Removed.

	* MonoSymbolWriter.cs (SourceFile): Implement ISymbolDocumentWriter.

2003-02-08  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs (GetMethodSource): New public method.
	(FindMethod): Return the correct index.

2003-02-07  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs (Methods, Sources): New public properties.

2003-02-07  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs (MonoSymbolFile.ReadSymbolFile): New public
	static method, returns null (without throwing an exception) if the
	assembly doesn't have any debugging info.

2003-02-07  Martin Baulig  <martin@ximian.com>

	* MonoSymbolWriter.cs (MonoSymbolWriter.Initialize): Removed the
	custom initialization function.

	* MonoSymbolTableWriter.cs: Removed; the code is now in
	MonoSymbolFile.cs and MonoSymbolWriter.cs.

2003-02-07  Martin Baulig  <martin@ximian.com>

	* MonoSymbolFile.cs: The symbol file is now a resource in the
	assembly instead of a separate file.

	* MonoSymbolTable.cs: Did a few more cleanups, sort the line
	number table and remove duplicate line numbers.

2003-02-05  Martin Baulig  <martin@ximian.com>

	Modified the symbol file format to speed up method looks by name
	and cleaned this up a lot.

	* MonoSymbolFile.cs: New public class.  This is now a public class
	and writes and reads the symbol file.

	* IMonoBinaryReader.cs: Removed.

	* MonoSymbolTable.cs: Set version number to 29.

2003-01-17  Zoltan Varga  <vargaz@freemail.hu>

	* MonoSymbolWriter.cs (OpenMethod): Make it work on constructors.

2002-10-13  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 28.
	(SourceFileEntry): Read the methods when they're needed.
	(MethodSourceEntry): Made this a struct, not a class.

2002-10-13  Martin Baulig  <martin@gnome.org>

	* MonoSymbolTable.cs: Set version number to 27.  Added a source